<resources>
    <string name="app_name">EVI</string>
    <string name="id">ID</string>
    <string name="entire_id">Masukkan Id Anda</string>
    <string name="password">Password</string>
    <string name="insert_password_caption">Masukkan Kata Sandi</string>
    <string name="login_caption">Masuk</string>
    <string name="confirmed">Terkonfirmasi</string>
    <string name="recover">Sembuh</string>
    <string name="death">Meninggal</string>
    <string name="cari">Cari...</string>
    <string name="select_province">Pilih Provinsi</string>
    <string name="province">Provinsi</string>
    <string name="confirmed_case">Kasus Terkonfirmasi</string>
    <string name="sorting">Urutkan</string>
    <string name="select">Pilih</string>
    <string name="all">Semua</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
</resources>
