<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModelLogin"
            type="com.example.evi.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_FFFFFF"
        tools:context=".login.LoginActivity">

        <ImageView
            android:id="@+id/logo"
            style="@style/SplashTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:scaleType="fitEnd"
            android:src="@drawable/coronavirus"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_id_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="16sp"
            android:text="@string/id"
            android:textColor="@color/black_484848"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_outline_stroke"
            android:hint="@string/entire_id"
            android:inputType="textEmailAddress"
            android:lineSpacingExtra="14sp"
            android:padding="17dp"
            android:text="@={viewModelLogin.userId}"
            android:textColor="@color/black_484848"
            android:textColorHint="@color/gray_ADABAB"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/text_id_caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_password_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:lineSpacingExtra="16sp"
            android:text="@string/password"
            android:textColor="@color/black_484848"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/text_id"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="30dp"
            app:boxStrokeColor="@color/black_484848"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/text_password_caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_outline_stroke"
                android:hint="@string/insert_password_caption"
                android:inputType="textPassword"
                android:lineSpacingExtra="14sp"
                android:padding="17dp"
                android:text="@={viewModelLogin.userPassword}"
                android:textColor="@color/black_484848"
                android:textColorHint="@color/gray_ADABAB"
                android:textSize="14sp"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/backgroud_button_blue"
            android:text="@string/login_caption"
            android:textSize="15sp"
            android:textColor="@color/white_FFFFFF"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>