<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModelSorting"
            type="com.example.evi.list.ListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:background="@color/white_FFFFFF">

        <View
            android:id="@+id/notch"
            android:layout_width="32dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            android:background="@color/greyish_brown"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_header_caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_close_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_header_caption"
            app:layout_constraintBottom_toBottomOf="@id/text_header_caption"/>

        <TextView
            android:id="@+id/text_header_caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/firasans_semi_bold"
            android:text="@string/select_province"
            android:textColor="@color/black_484848"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/notch"
            app:layout_constraintStart_toEndOf="@id/button_close"
            app:layout_constraintBottom_toTopOf="@id/divider"/>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/stroke_EDEDED"
            app:layout_constraintTop_toBottomOf="@+id/text_header_caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_province_filter"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_outline_gray"
            android:fontFamily="@font/firasans_regular"
            android:gravity="center"
            android:text="@string/province"
            android:textAlignment="center"
            android:textColor="@color/black_484848"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_confirmed_filter"/>

        <TextView
            android:id="@+id/text_confirmed_filter"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_outline_gray"
            android:fontFamily="@font/firasans_regular"
            android:gravity="center"
            android:text="@string/confirmed_case"
            android:textAlignment="center"
            android:textColor="@color/black_484848"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toEndOf="@id/text_province_filter"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>