<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="feature"
            type="com.example.evi.repository.Features" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/list_headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/firasans_semi_bold"
                android:text="@{feature.attributes.provinsi}"
                android:textSize="14sp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="admin@admin.com"
                tools:textColor="@color/black_484848" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_confirmed_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/firasans_regular"
                android:gravity="center_horizontal"
                android:textColor="@color/black_484848"
                android:textSize="12sp"
                android:text="@string/confirmed"
                app:layout_constraintEnd_toStartOf="@id/text_positif_caption"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/list_headline"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_confirmed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/firasans_regular"
                android:textSize="12sp"
                android:textColor="@color/black_484848"
                android:textAlignment="center"
                android:text="@{feature.attributes.kasusPositif}"
                app:layout_constraintEnd_toEndOf="@id/text_confirmed_caption"
                app:layout_constraintStart_toStartOf="@id/text_confirmed_caption"
                app:layout_constraintTop_toBottomOf="@id/text_confirmed_caption"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_positif_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/firasans_regular"
                android:gravity="center_horizontal"
                android:textColor="@color/blue_2196F3"
                android:textSize="12sp"
                android:text="@string/recover"
                app:layout_constraintEnd_toStartOf="@id/text_death_caption"
                app:layout_constraintStart_toEndOf="@id/text_confirmed_caption"
                app:layout_constraintTop_toBottomOf="@id/list_headline" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_positif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/firasans_regular"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textColor="@color/blue_2196F3"
                android:text="@{feature.attributes.kasusSembuh}"
                app:layout_constraintEnd_toEndOf="@id/text_positif_caption"
                app:layout_constraintStart_toStartOf="@id/text_positif_caption"
                app:layout_constraintTop_toBottomOf="@id/text_positif_caption"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_death_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/firasans_regular"
                android:gravity="center_horizontal"
                android:textColor="@color/red_F44336"
                android:textSize="12sp"
                android:text="@string/death"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_positif_caption"
                app:layout_constraintTop_toBottomOf="@id/list_headline" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_death"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/firasans_regular"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textColor="@color/red_F44336"
                android:text="@{feature.attributes.kasusMeninggal}"
                app:layout_constraintEnd_toEndOf="@id/text_death_caption"
                app:layout_constraintStart_toStartOf="@id/text_death_caption"
                app:layout_constraintTop_toBottomOf="@id/text_death_caption"
                tools:text="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>